# Hara

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: .clang-format  CMakeLists.txt  README.md
engine/src/: EntryPoint.h  Hara.h  Main.cpp
engine/src/core/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h  Window.h
engine/src/engine/: Engine.cpp  Engine.h
engine/src/platform/windows/: MSWindow.cpp
haraEngine/: CMakeLists.txt  README.md
haraEngine/src/: EntryPoint.h  Hara.h  hpch.h
haraEngine/src/core/: Application.cpp  Application.h  Core.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
haraEngine/src/engine/: Engine.cpp  Engine.h
haraEngine/src/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
haraEngine/src/gui/: GuiLayer.cpp  GuiLayer.h
haraEngine/src/platform/windows/: MSWindow.cpp  MSWindow.h
scripts/windows/: BuildProject.bat  build.bat
stage/: CMakeLists.txt
stage/src/: Stage.cpp
